Pricing: fixed custom pricing section on firefox

--- a/client/Pricing/styl/pricing.styl
+++ b/client/Pricing/styl/pricing.styl
@@ -360,6 +360,7 @@ body.pricing
     padding-bottom        128px
 
     h2.general-title
+      clear               both
       padding             128px 0 36px
 
     .kdbutton.border-only
